fixed the spacing of buttons

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,6 +10,10 @@ input{
     border-radius: 10px;
 }
 
+#enter-game-options {
+    margin-top: 20px;
+}
+
 #stage-1-page{
     margin: auto;
 }
@@ -17,15 +21,13 @@ input{
 #game-rule-text {
     background-color:#F5AC5D;
     color: #5AFAD7;
-    /* margin-top: 30px; */
     width: 70%;
     display: none;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 16px;
     font-style: italic;
     font-weight: bold;
-    margin: 30px auto;
-    /* float: left; */
+    margin: 10px auto;
 }
 
 #game-rule-text h4 {
